--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/Spreadsheets/Summary_Stored_Procedures.txt
-/Spreadsheets/Spreadsheets
-/Spreadsheets/.Rhistory
-/Spreadsheets/Queries_stored_procedures.txt
+/Summary_Stored_Procedures.txt
+/Spreadsheets
+/.Rhistory
+/Queries_stored_procedures.txt
