--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /Spreadsheets
 /.Rhistory
 /Queries_stored_procedures.txt
+/Live/.Rhistory
+/Live/Queries_stored_procedures.txt
+/Live/Spreadsheets/Offshore_Inshore_all_20150323.xlsx
+/Live/Spreadsheets/Offshore_SACs_SPAs_20150227.xlsx
+/Live/Spreadsheets/Offshore_SACs_SPAs_Offin_20150518.xlsx
+/Live/Summary_Stored_Procedures.txt
